--- a/index.html
+++ b/index.html
@@ -195,13 +195,16 @@ summary {
 </div>
 
 
-<p>Hello</p>
+<div id="workshop-reproducible-research-techniques-for-synthesis" class="section level1">
+<h1>Workshop: Reproducible Research Techniques for Synthesis</h1>
+<p><em>February 24-25, March 1-3, 2021</em></p>
 <p>The modules I’ve gotten through:</p>
 <ul>
 <li><p><a href="./Data-Cleaning_Session-8.html">Session 8: Data Cleaning</a></p></li>
 <li><p><a href="./training_jmasterman.html">Training</a></p></li>
-<li><p><a href="./intro-to-r-markdown.html">intro to R</a></p></li>
+<li><p><a href="./intro-to-r-markdown.html">Introduction to R</a></p></li>
 </ul>
+</div>
 
 
 
